Mon May 14 17:17:58 CEST 2012
-----------------------------
	modified:   chromium/chromium.SlackBuild
	modified:   skype_static/skype_static.SlackBuild

Sat May  5 20:17:08 CEST 2012
-----------------------------
	modified:   compat32-libraries/compat32-libraries.SlackBuild
	modified:   nvidia-linux/nvidia-linux.SlackBuild
	modified:   skype_static/skype_static.SlackBuild

Tue May  1 22:52:57 CEST 2012
-----------------------------
	modified:   chromium/chromium.SlackBuild

Mon Apr 30 22:34:27 CEST 2012
-----------------------------
	new file:   chromium/chromium.SlackBuild

Thu Apr 26 12:15:02 CEST 2012
-----------------------------
	new file:   amsn/amsn.SlackBuild
	new file:   farsight2/farsight2.SlackBuild
	modified:   flash-player/flash-player.SlackBuild
	new file:   glib-networking/glib-networking.SlackBuild
	new file:   gssdp/gssdp.SlackBuild
	new file:   gupnp-igd/gupnp-igd.SlackBuild
	new file:   gupnp/gupnp.SlackBuild
	new file:   libevent/libevent.SlackBuild
	new file:   libnice/libnice.SlackBuild
	new file:   libsoup/libsoup.SlackBuild
	new file:   tls/tls.SlackBuild

Sun Apr 22 00:50:36 CEST 2012
-----------------------------
	modified:   libproxy/libproxy.SlackBuild

Sat Apr 21 18:23:05 CEST 2012
-----------------------------
	new file:   cnijfilter-mp495series/cnijfilter-mp495series.SlackBuild
	new file:   exif/exif.SlackBuild
	new file:   libproxy/libproxy.SlackBuild
	modified:   spkg/spkg.SlackBuild
	modified:   unrar/unrar.SlackBuild

Thu Apr 19 16:32:18 CEST 2012
-----------------------------
	new file:   gst-python/gst-python.SlackBuild
	new file:   jhead/jhead.SlackBuild
	new file:   judy/judy.SlackBuild
	new file:   libgnome-keyring/libgnome-keyring.SlackBuild
	new file:   libtasn1/libtasn1.SlackBuild
	new file:   ntlmaps/ntlmaps.SlackBuild
	new file:   p7zip/p7zip.SlackBuild
	modified:   slackyd/slackyd.SlackBuild
	new file:   slapt-get/slapt-get.SlackBuild
	new file:   spkg/spkg.SlackBuild
	new file:   ssldump/ssldump.SlackBuild
