@@ -1,0 +1,3 @@
+#!/bin/bash
+cd /usr/share/portecle
+exec java -jar portecle.jar &
