@@ -1,3 +1,7 @@
+Mon May 14 22:07:19 CEST 2012
+-----------------------------
+	new file:   portecle/portecle.SlackBuild
+
 Mon May 14 17:17:58 CEST 2012
 -----------------------------
 	modified:   chromium/chromium.SlackBuild
